--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./style.css" />
-
     <title>Frontend Mentor | Sunnyside agency landing page</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap"
-    />
   </head>
   <body>
     <header>
@@ -24,15 +15,31 @@
           <img src="./images/logo.svg" alt="" />
         </div>
         <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="" class="btn">Contact</a></li>
+          <li><a href=".">About</a></li>
+          <li><a href=".">Services</a></li>
+          <li><a href=".">Projects</a></li>
+          <li><a href="." class="btn">Contact</a></li>
         </ul>
+        <div class="burger">
+          <div class="menu-1"></div>
+          <div class="menu-2"></div>
+          <div class="menu-3"></div>
+        </div>
       </nav>
-
+      <div class="mobile-nav">
+        <ul class="mobile-ul">
+          <li><a href=".">About</a></li>
+          <li><a href=".">Services</a></li>
+          <li><a href=".">Projects</a></li>
+          <li>
+            <a href="." class="btn" style="color: hsl(212, 27%, 19%)"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </div>
       <h1>We are creatives</h1>
-      <div id="down-arrow">
+      <div class="down-arrow">
         <img src="./images/icon-arrow-down.svg" alt="" />
       </div>
     </header>
@@ -46,12 +53,11 @@
             grow fast. Engage your clients through compelling visuals that do
             most of the marketing for you.
           </p>
-          <div class="sabe-mais">Learn more</div>
+          <div class="learn-more">Learn more</div>
         </div>
       </div>
-      <div class="container img-v-1"></div>
-      <div class="container img-v-2"></div>
-
+      <div class="container img-v1"></div>
+      <div class="container img-v2"></div>
       <div class="container text text-2">
         <div class="inner-content">
           <h2>Stand out to the right audience</h2>
@@ -60,20 +66,20 @@
             photographers, videographers, and copywriters, we’ll build and
             extend your brand in digital places.
           </p>
-          <div class="sabe-mais">Learn more</div>
+          <div class="learn-more">Learn more</div>
         </div>
       </div>
-      <div class="container img-v-3">
+      <div class="container img-v3">
         <div class="img-text">
-          <h2>Graphie Desig</h2>
+          <h2>Graphic design</h2>
           <p>
-            Um ótimo design torna você memorável. Entregamos obras de arte que
-            destacam a mensagem da sua marca e capturam a atenção de clientes em
-            potencial.
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
           </p>
         </div>
       </div>
-      <div class="container img-v-4">
+      <div class="container img-v4">
         <div class="img-text">
           <h2>Photography</h2>
           <p>
@@ -83,77 +89,114 @@
         </div>
       </div>
     </main>
-    <section>
-      <section class="client">
-        <h2>Client testimonials</h2>
-        <div class="client-container">
-          <div class="client-1">
-            <div class="client-img"></div>
-            <p>
-              We put our trust in Sunnyside and they delivered, making sure our
-              needs were met and deadlines were always hit.
-            </p>
-            <div class="client-info">
-              <span>Emily R.</span>
-              <p>Marketing Director</p>
-            </div>
-          </div>
-          <div class="client-2">
-            <div class="client-img"></div>
-            <p>
-              Sunnyside’s enthusiasm coupled with their keen interest in our
-              brand’s success made it a satisfying and enjoyable experience.
-            </p>
-            <div class="client-info">
-              <span>Thomas S.</span>
-              <p>Chief Operating Officer</p>
-            </div>
-          </div>
-          <div class="client-3">
-            <div class="client-img"></div>
-            <p>
-              Incredible end result! Our sales increased over 400% when we
-              worked with Sunnyside. Highly recommended!
-            </p>
-            <div class="client-info">
-              <span>Jennie F.</span>
-              <p>Business Owner</p>
-            </div>
+    <section class="client">
+      <h2>Client testimonials</h2>
+      <div class="client-container">
+        <div class="client-1">
+          <div class="client-img"></div>
+          <p>
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
+          </p>
+          <div class="client-info">
+            <h3>Emily R.</h3>
+            <p>Marketing Director</p>
           </div>
         </div>
-      </section>
-      <div class="colecao-de-fotos">
-        <div class="mini-foto">
-          <img src="/images/desktop/image-gallery-milkbottles.jpg" alt="" />
+        <div class="client-2">
+          <div class="client-img"></div>
+          <p>
+            Sunnyside’s enthusiasm coupled with their keen interest in our
+            brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <div class="client-info">
+            <h3>Thomas S.</h3>
+            <p>Chief Operating Officer</p>
+          </div>
         </div>
-        <div class="mini-foto">
-          <img src="/images/desktop/image-gallery-orange.jpg" alt="" />
-        </div>
-        <div class="mini-foto">
-          <img src="/images/desktop/image-gallery-cone.jpg "alt=""">
-        </div>
-        <div class="mini-foto">
-          <img src="/images/desktop/image-gallery-sugarcubes.jpg" alt="" />
+        <div class="client-3">
+          <div class="client-img"></div>
+          <p>
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <div class="client-info">
+            <h3>Jennie F.</h3>
+            <p>Business Owner</p>
+          </div>
         </div>
       </div>
     </section>
-    <footer class="footer-container">
-      <nav class="footer-nav">
-        <div class="logo">
-          <img src="./images/logo.svg" alt="" />
+    <section class="img-section">
+      <div class="bottom-img">
+        <img
+          class="desktop-img"
+          src="./images/desktop/image-gallery-milkbottles.jpg"
+          alt=""
+        />
+        <img
+          class="mobile-img"
+          src="./images/mobile/image-gallery-milkbottles.jpg"
+          alt=""
+        />
+      </div>
+      <div class="bottom-img">
+        <img
+          class="desktop-img"
+          src="./images/desktop/image-gallery-orange.jpg"
+          alt=""
+        />
+        <img
+          class="mobile-img"
+          src="./images/mobile/image-gallery-orange.jpg"
+          alt=""
+        />
+      </div>
+      <div class="bottom-img">
+        <img
+          class="desktop-img"
+          src="./images/desktop/image-gallery-cone.jpg"
+          alt=""
+        />
+        <img
+          class="mobile-img"
+          src="./images/mobile/image-gallery-cone.jpg"
+          alt=""
+        />
+      </div>
+      <div class="bottom-img">
+        <img
+          class="desktop-img"
+          src="./images/desktop/image-gallery-sugarcubes.jpg"
+          alt=""
+        />
+        <img
+          class="mobile-img"
+          src="./images/mobile/image-gallery-sugar-cubes.jpg"
+          alt=""
+        />
+      </div>
+    </section>
+    <footer>
+      <div class="footer-container">
+        <nav class="footer-nav">
+          <div class="logo">
+            <img src="./images/logo.svg" alt="" />
+          </div>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+        </nav>
+        <div class="social-links">
+          <span><img src="./images/icon-facebook.svg" alt="" /></span>
+          <span><img src="./images/icon-instagram.svg" alt="" /></span>
+          <span><img src="./images/icon-twitter.svg" alt="" /></span>
+          <span><img src="./images/icon-pinterest.svg" alt="" /></span>
         </div>
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
-        </ul>
-      </nav>
-      <div class="rede-socias">
-        <span><img src="/images/icon-facebook.svg" alt="" /></span>
-        <span> <img src="/images/icon-instagram.svg" alt="" /></span>
-        <span><img src="/images/icon-twitter.svg" alt="" /></span>
-        <span><img src="/images/icon-pinterest.svg" alt="" /></span>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
